--- a/index.html
+++ b/index.html
@@ -59,11 +59,7 @@
 
                 <p class="mbr-text pb-4 align-left mbr-fonts-style display-5">
                     NOLA Concrete Pumping provides customers with the most experienced operators in the industry and safe, well-maintained equipment. We are also proud of our long list of satisfied customers</p>
-                <div class="mbr-section-btn"><a class="btn btn-lg btn-info display-4" href="tel:+1-985-308-0141">CALL (985) 308-0141</a> <a class="btn btn-lg btn-success display-4" href="index.html#features03-1f">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;BOOK NOW &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</a></div>
-                <!-- ScheduleOnce button START -->
-<button id="SOIBTN_NOLAConcretePumping" style="background: #971527; color: #ffffff; padding: 10px 20px; border: 1px solid #c8c8c8; font: bold 14px Arial; cursor: pointer;" onclick="var soqueryparam = &quot;//go.oncehub.com/NOLAConcretePumping?&amp;bt=1&quot;; if (window.location.href.indexOf(&quot;?&quot;) > 0) {   soqueryparam += &quot;&amp;&quot;+window.location.href.slice(window.location.href.indexOf(&quot;?&quot;) + 1);}window.open(soqueryparam)">BOOK NOW</button>
-
-<!-- ScheduleOnce button END -->
+                <div class="mbr-section-btn"><a class="btn btn-lg btn-info display-4" href="tel:+1-985-308-0141">CALL (985) 308-0141</a> <a class="btn btn-lg btn-primary display-4" href="https://go.oncehub.com/NOLAConcretePumping" target="_blank">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;BOOK NOW &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</a></div>
             </div>
             <div class="col-lg-7">
                 <div class="wrapper">
@@ -247,7 +243,7 @@
     <div class="container-fluid">
         <div class="row main">
             <div class="col-md-6 map">
-              <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAEIpgj38KyLFELm2bK9Y7krBkz1K-cMq8&amp;q=place_id:ChIJQzGMA4fEIIYRe6kb2-Y8uNc" allowfullscreen=""></iframe></div>
+              <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCy9r70T3NYf3PhvVflTo0_zdif2_IoIYs&amp;q=place_id:ChIJQzGMA4fEIIYRe6kb2-Y8uNc" allowfullscreen=""></iframe></div>
             </div>
             <div class="col-md-6 text-element">
                 <div class="text-content">
@@ -274,7 +270,7 @@
     </div>
 </section>
 
-<section class="mbr-instagram-feed" data-rows="2" data-per-row-slider="" data-spacing="5" data-full-width="" data-token="35637213121.727bfe1.4610c9c579c242709832aaff58cbddb2" data-per-row-grid="4" id="instagram-feed-block-15" data-rv-view="16" style="background-image: url(assets/images/whatsapp-image-2020-06-05-at-8.52.45-am-640x480.jpg); padding-top: 40px; padding-bottom: 40px;">
+<section class="mbr-instagram-feed" data-rows="2" data-per-row-slider="" data-spacing="5" data-full-width="" data-token="35637213121.727bfe1.4610c9c579c242709832aaff58cbddb2" data-per-row-grid="4" id="instagram-feed-block-15" data-rv-view="218" style="background-image: url(assets/images/whatsapp-image-2020-06-05-at-8.52.45-am-640x480.jpg); padding-top: 40px; padding-bottom: 40px;">
     <div class="mbr-overlay" style="opacity: 0.6; background-color: rgb(239, 239, 239);">
     </div>
     <div class="container container_toggle">
