--- a/index.html
+++ b/index.html
@@ -202,17 +202,16 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-12 align-center column">
+            <div class="col-12 align-center column"><!-- ScheduleOnce embed START -->
+<div id="SOIDIV_NOLAConcretePumping" data-so-page="NOLAConcretePumping" data-height="550" data-style="border: 1px solid #d8d8d8; min-width: 600px; max-width: 900px;" data-psz="00"></div>
+<script type="text/javascript" src="https://cdn.oncehub.com/mergedjs/so.js"></script>
+<!-- ScheduleOnce embed END -->
                 <div class="page-title-content d-inline-block align-top">
                     <div class="icon-section align-center mb-4">
                         
                     </div>
 
                     <h1 class="mbr-section-title title mbr-white mbr-fonts-style w-100 mb-4 display-2">
-                     <!-- ScheduleOnce embed START -->
-<div id="SOIDIV_NOLAConcretePumping" data-so-page="NOLAConcretePumping" data-height="550" data-style="border: 1px solid #d8d8d8; min-width: 290px; max-width: 900px;" data-psz="00"></div>
-<script type="text/javascript" src="https://cdn.oncehub.com/mergedjs/so.js"></script>
-<!-- ScheduleOnce embed END -->
                     </h1>
                     
 
@@ -260,7 +259,7 @@
     </div>
 </section>
 
-<section class="mbr-instagram-feed" data-rows="2" data-per-row-slider="" data-spacing="5" data-full-width="" data-token="35637213121.727bfe1.4610c9c579c242709832aaff58cbddb2" data-per-row-grid="4" id="instagram-feed-block-15" data-rv-view="218" style="background-image: url(assets/images/whatsapp-image-2020-06-05-at-8.52.45-am-640x480.jpg); padding-top: 40px; padding-bottom: 40px;">
+<section class="mbr-instagram-feed" data-rows="2" data-per-row-slider="" data-spacing="5" data-full-width="" data-token="35637213121.727bfe1.4610c9c579c242709832aaff58cbddb2" data-per-row-grid="4" id="instagram-feed-block-15" data-rv-view="796" style="background-image: url(assets/images/whatsapp-image-2020-06-05-at-8.52.45-am-640x480.jpg); padding-top: 40px; padding-bottom: 40px;">
     <div class="mbr-overlay" style="opacity: 0.6; background-color: rgb(239, 239, 239);">
     </div>
     <div class="container container_toggle">
