--- a/index.html
+++ b/index.html
@@ -208,11 +208,11 @@
             </div>
 
             <div class="col-12 col-md-7 col-xs-12 py-3 py-md-4 pl-5 mx-auto">
-                <div class="mbr-section-text pt-4 pt-md-0"><!-- ScheduleOnce embed START -->
+                <div class="mbr-section-text pt-4 pt-md-0">
+                   <!-- ScheduleOnce embed START -->
 <div id="SOIDIV_NOLAConcretePumping" data-so-page="NOLAConcretePumping" data-height="550" data-style="border: 1px solid #d8d8d8; min-width: 290px; max-width: 900px;" data-psz="00"></div>
 <script type="text/javascript" src="https://cdn.oncehub.com/mergedjs/so.js"></script>
-<!-- ScheduleOnce embed END -->
-                    
+<!-- ScheduleOnce embed END --> 
                 </div>
             </div>
         </div>
