--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
     <div class="container-fluid">
         <div class="row main">
             <div class="col-md-6 map">
-              <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCy9r70T3NYf3PhvVflTo0_zdif2_IoIYs&amp;q=place_id:ChIJQzGMA4fEIIYRe6kb2-Y8uNc" allowfullscreen=""></iframe></div>
+              <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAEIpgj38KyLFELm2bK9Y7krBkz1K-cMq8&amp;q=place_id:ChIJQzGMA4fEIIYRe6kb2-Y8uNc" allowfullscreen=""></iframe></div>
             </div>
             <div class="col-md-6 text-element">
                 <div class="text-content">
@@ -236,7 +236,7 @@
         <div class="row">
             <div class="col">
                 <div class="inst">
-                    <h1 class="inst__title align-center mbr-fonts-style display-2 mbr-editable-content"><strong>Follow us in Instagram @Nola_Concrete_Pumping</strong></h1>
+                    <h1 class="inst__title align-center mbr-fonts-style display-2 mbr-editable-content"><strong>Follow us in Instagram</strong> <a jref="https://www.instagram.com/nola_concrete_pumping/" target="_bkank"><strong>@Nola_Concrete_Pumping</strong></a></h1>
 <!-- Place <div> tag where you want the feed to appear -->
 <div id="curator-feed-nola-concrete-pumping-layout"><a href="https://curator.io" target="_blank" class="crt-logo crt-tag">Powered by Curator.io</a></div>
 <!-- The Javascript can be moved to the end of the html page before the   <input name="animation" type="hidden">
