--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <div class="col-lg-6 md-pb m-auto">
                 <div class="content">
                     <h1 class="mbr-section-title align-left mbr-bold mbr-white pb-4 mbr-fonts-style display-1">NOLA Concrete Pumping Rentals</h1>
-                    <h2 class="mbr-section-subtitle align-left mbr-white mbr-light mbr-fonts-style display-5">Lower hourly costs<div>High speed placement capabilities</div><div>Set up virtually anywhere</div><div>Long distance capability</div><div>Fast setup, moving and cleanup time</div><div>Tough mix pumping ability – bridge decks to house slabs</div><div>Access capability to restricted spaces.</div></h2>
+                    <h2 class="mbr-section-subtitle align-left mbr-white mbr-light mbr-fonts-style display-5">• Lower hourly costs<div>• High speed placement capabilities</div><div>• Set up virtually anywhere</div><div>• Long distance capability</div><div>• Fast setup, moving and cleanup time</div><div>• Tough mix pumping ability – bridge decks to house slabs</div><div>• Access capability to restricted spaces.</div></h2>
                     <div class="mbr-section-btn"><a class="btn btn-lg btn-info display-4" href="tel:+1-985-308-0141">CALL (985) 308-0141</a> <a class="btn btn-lg btn-primary display-4" href="https://go.oncehub.com/NOLAConcretePumping" target="_blank">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;BOOK NOW &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</a></div>
                 </div>
             </div>
