--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
         <div class="row">
             <div class="col">
                 <div class="inst">
-                    <h1 class="inst__title align-center mbr-fonts-style display-2 mbr-editable-content"><strong>Follow us in Instagram</strong> <a jref="https://www.instagram.com/nola_concrete_pumping/" target="_bkank"><strong>@Nola_Concrete_Pumping</strong></a></h1>
+                    <h1 class="inst__title align-center mbr-fonts-style display-2 mbr-editable-content"><strong>Follow us on Instagram</strong> <a jref="https://www.instagram.com/nola_concrete_pumping/" target="_bkank"><strong>@Nola_Concrete_Pumping</strong></a></h1>
 <!-- Place <div> tag where you want the feed to appear -->
 <div id="curator-feed-nola-concrete-pumping-layout"><a href="https://curator.io" target="_blank" class="crt-logo crt-tag">Powered by Curator.io</a></div>
 <!-- The Javascript can be moved to the end of the html page before the   <input name="animation" type="hidden">
